# coda

./: .clinerules  .env.example  .gitignore  .gitmodules  .golangci.yaml  Dockerfile  LICENSE  Makefile  README.md  cloudbuild.coda.yaml  cloudbuild.ollama.yaml  go.mod  go.sum
.github/workflows/: ci.yaml
cmd/coda/: main.go
config/: dev.yaml  local.yaml
docker/ollama/: Dockerfile
gguf/: Modelfile  README.md  download.sh  pyproject.toml
infrastructure/: .gitignore  README.md
infrastructure/environments/dev/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variable.tf
infrastructure/environments/exp/: backend.tf  main.tf  terraform.tfvars.example  variable.tf
infrastructure/modules/artifact-registry/: README.md  main.tf  variable.tf
infrastructure/modules/coda/: README.md  local.tf  main.tf  variable.tf
infrastructure/modules/ollama/: README.md  local.tf  main.tf  variable.tf
internal/config/: config.go  config_test.go  loader.go  module.go
internal/frontend/: frontend.go  index.go  module.go  routes.go  templates.go
internal/frontend/assets/static/css/: global.css
internal/frontend/assets/templates/: base.gohtml
internal/frontend/assets/templates/components/: error.gohtml  results.gohtml
internal/infrastructure/: middleware.go  module.go  server.go
internal/llm/: completer.go  errors.go  llm.go  message.go  model.go  module.go
internal/llm/langfuse/: langfuse.go
internal/llm/ollama/: ollama.go
internal/llm/openai/: openai.go
internal/logger/: context.go  logger.go  module.go
internal/review/: model.go  module.go
(+2 files in other folders)
