[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp~=3.9.3",
    "gguf>=0.1.0",
    "huggingface-hub[cli]~=0.23.2",
    "matplotlib~=3.10.0",
    "numpy~=1.26.4",
    "openai~=1.55.3",
    "pandas~=2.2.3",
    "prometheus-client~=0.20.0",
    "protobuf>=4.21.0,<5.0.0",
    "pytest~=8.3.3",
    "requests~=2.32.3",
    "seaborn~=0.13.2",
    "sentencepiece~=0.2.0",
    "torch~=2.2.1",
    "transformers>=4.45.1,<5.0.0",
    "typer~=0.15.1",
    "wget~=3.2",
]
